<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activy_background"
    android:padding="10dp"
    tools:context=".AudioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/do_test_elevation"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Informes Sonoros"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/thumb_bg"
            android:elevation="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/button_audio_play01"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_play" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:text="@string/textView_orientacao_port"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/thumb_bg"
            android:elevation="5dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/button_audio_play02"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_play" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:text="@string/textView_orientacao_fazer_port"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/thumb_bg"
            android:elevation="5dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/button_audio_play03"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_play" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:text="@string/textView_orientacao_ing"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/thumb_bg"
            android:elevation="5dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/button_audio_play04"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_play" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:text="@string/textView_orientacao_fazer_ing"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>